--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: "3.8"
-
 services:
   postgres:
     image: postgres:15
-    container_name: postgres
+    container_name: postgreSQL
     restart: always
     ports:
       - "5432:5432"
