--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
     "prisma": "^6.9.0",
+    "socket.io": "^4.8.1",
     "zod": "^3.25.64"
   },
   "devDependencies": {
@@ -34,5 +35,6 @@
     "@types/pg": "^8.15.4",
     "tsx": "^4.20.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef"
 }
